# enum2contract

./: Cargo.toml  README.md
src/: lib.rs
tests/: convert.rs
