[package]
name = "enum2contract"
version = "0.1.6"
authors = ["Matthew Berger <matthewjordanberger@gmail.com>"]
description = """
enum2contract is a no_std compatible rust derive macro that lets users specify contracts for pub/sub style messaging using strongly typed rust enums.

Conversion methods for JSON and binary are created for the generated payloads.
"""
homepage = "https://github.com/matthewjberger/enum2contract"
repository = "https://github.com/matthewjberger/enum2contract"
keywords = ["enum", "macro", "contract"]
license = "MIT"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
serde = { version = "1.0.158", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.94", default-features = false, features = ["alloc"] }
postcard = { version = "1.0.4", features = ["alloc"] }
